# etiketti

./: .gitignore  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  baseline-bandit.json  etiketti.ABOUT  indirect-package-names.yml  pyproject.toml  requirements.txt  sbom.json  sbom.json.sha256  third-party-fallbacks.yml
docs/: SUMMARY.md  api.md  book.toml  changes.md  index.md  install.md  test-coverage.md  usage.md
etc/: baseline-bandit.json  coverage-totals.json  git-stats.json  mkdocs.yml  monthly-downloads.json  packaging-facts.json  yearly-commits.json
etc/sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
etiketti/: __init__.py  __main__.py  cli.py  discover.py  implementation.py
example/: etiketti.yml  label_per_env.py
examples/: etiketti.yml
sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
test/: test_cli.py  test_discover.py  test_implementation.py
test/fixtures/basic/: bookmatter.tex  document.tex  driver.tex  metadata.tex  metadata.yml  publisher.tex  setup.tex
